--- a/src/style/global.css
+++ b/src/style/global.css
@@ -75,7 +75,9 @@ body {
     background-color: #191919;
     width: 50%;
     height: 100%;
-    color:#FFFF
+    color:#FFFF;
+    font-size: 30px;
+    
 
 
 }
@@ -83,6 +85,7 @@ body {
     background-color: #FFFF;
     width: 50%;
     height: 100%;
+    
 
 }
     
