--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,4 +1,5 @@
 * {
+    font-family: Graphik-Medium, Graphik-Regular, "Gotham SSm A", "Gotham SSm B", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     outline: 0;
@@ -19,16 +20,20 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
 }
 #pedro{
-    font-family:Graphik-Medium, Graphik-Regular, "Gotham SSm A", "Gotham SSm B", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 22px;
     margin-left: 148px;
     margin-top: 80px;
    margin-bottom: 20px;
    margin-right: 20px;
    line-height: 60px;
-   letter-spacing: -0.03em
+   letter-spacing: -0.06em;
+   font-weight: lighter;
+
+   
 }
 
 #pequeno{
@@ -51,6 +56,7 @@ body {
     border: none;
     font-weight: bold;
     font-size: 2.5vh;
+    cursor: pointer;
 
 }
 #roxo:hover{
@@ -64,7 +70,7 @@ body {
 }
 .quadrados{
     width: 180vh;
-    height: 100vh;
+    height: 115vh;
     margin-left: 100px;
     margin-top: 60px;
     font-size: 50px;
@@ -78,19 +84,193 @@ body {
     color:#FFFF;
     font-size: 30px;
     
-
-
 }
 #branco{
     background-color: #FFFF;
     width: 50%;
     height: 100%;
+    font-size: 30px;
     
 
 }
+#letra1{
+    margin-top: 70px;
+    margin-left: 70px;
+}
+
+.imagem, img{
+    width:650px ;
+    height: 600px;
+}
+
+#letra2{
+    margin-left: 75px;
+
+}
+.imagem2 {
+    width: 550px;
+    height: 500px;
+    margin-top: 40px;
+    margin-left: 50px;
     
+}
+
+#letra3{
+    color:black;
+    margin-left: 60px;
+    margin-top: 70px;
+
+}
+#letrab{
+    color: black;
+    margin-left: 60px;
+}
+.retangulo{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFF;
+    margin-top: 90px;
+    
+}
+#letra4{
+    color: black;
+    font-size: 50px;
+    font-weight: bold;
+ margin-right: 15%;
+ margin-bottom: 20px;
+}
+.imagem3{
+    width: 550px;
+    height: 400px;
+}
+#letra5{
+    font-size: 25px;
+    margin-top: 50px;
+}
+#saibamais{
+    color:#8a05be;
+    font-size: 20px;
+    margin-top: 50px;
+
+}
+#saibamais:hover{
+    
+    opacity: 0.8;
+    text-decoration: underline;
+}
+
+.retangulo2{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#530082;
+    margin-top: 0%;
+
+}
+#letra6{
+    font-size: 60px;
+    font-weight: bold;
+ margin-right: 20%;
+ margin-bottom: 20px;
 
 
+ }
+#letra7{
+    font-size: 25px;
+    margin-top: 50px;
+}
+.imagem4{
+    width: 400px;
+    height: 200px;
+    margin-right: 30px;
+
+}
+.retangulo3{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFF;
+    margin-top: 0px;
+}
+#letra8{
+    font-size: 60px;
+    font-weight: 500;
+    color: black;
+ margin-right: 20%;
+ margin-bottom: 20px;
+
+
+}
+#letra9{
+    font-size: 25px;
+    margin-top: 50px;
+    
+}
+.imagem5{
+    width: 350px;
+    height: 400px;
+    margin-right: 10px;
+
+}
+.retangulo4{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#F5F5F5;
+    margin-top: 0px;
+
+}
+#letra10{
+    font-size: 60px;
+    font-weight: 500;
+    color: black;
+ margin-right: 20%;
+ margin-bottom: 20px;
+
+}
+#letra11{
+    font-size: 25px;
+    margin-top: 50px;
+    
+}
+.imagem6{
+    width: 500px;
+    height: 200px;
+    margin-right: 10px;
+
+
+}
+
+
+.modal{
+    position: fixed;
+    top: 1%;
+    left: 30%;
+    color: #FFFF;
+    padding: 10px;
+    background: rgba(0,0,0,0.75);
+    opacity: 0;
+    width: 30%;
+
+}
+.modal:target{
+    opacity: 1;
+    pointer-events: auto;
+}
+.fechar{
+    text-decoration: none;
+
+
+}
 /* class:
 .minhaclas{}
 
