--- a/src/style/global.css
+++ b/src/style/global.css
@@ -22,6 +22,10 @@ body {
     justify-content: space-between;
     position: fixed;
     top: 0;
+    margin-bottom: 30px;
+}
+.pedro{
+    margin-top: 10%;
 }
 #pedro{
     font-size: 22px;
@@ -249,26 +253,174 @@ body {
 
 
 }
+.retangulo5{
+    width: 100%;
+    height: 600px;
+    display:flex;
+    background-color: #FFFF;
+ color: black;
+
+}
+#parte1{
+    width:50%;
+    height: 600px;
+    
+
+}
+#parte2{
+    width:50%;
+    height:600px;
+   
+}
+
+#letra12{
+
+    font-size: 50px;
+    font-weight: bolder;
+ margin-right: 0%;
+ margin-bottom: 0%;
+ margin-left:15% ;
+ margin-top: 35%;
+
+}
+.letra13{
+    font-size: 25px;
+    width: 100%;
+    height: 10%;
+    margin-top: 10%;
+    font-weight: bolder;
+}
+
+.b1{
+    color:#8a05be;
+    font-size: 20px;
+    margin-top: 10px;
+    cursor: pointer;
+
+}
+.b1:hover{
+
+    opacity: 0.8;
+    text-decoration: underline;
+
+
+}
+
+.imagem7{
+
+   width: 500px;
+    height: 600px;
+    margin-right: 0%;
+    margin-left: 20%;
+
+
+}
+.retangulo6{
+    width: 100%;
+    height: 700px;
+    display:flex;
+    background-color:#F5F5F5;
+    color: black;
+}
+
+#letra14{
+    font-size: 50px;
+    font-weight: bolder;
+ margin-right: 0%;
+ margin-bottom: 0%;
+ margin-left:10% ;
+ margin-top: 10%;
+
+
+}
+#letra15{
+    font-size: 20px;
+    font-weight: 25;
+ margin-right: 0%;
+ margin-bottom: 0%;
+ margin-left:0% ;
+ margin-top: 10%;
+ color: #767676;
+
+}
+.imagem8{
+    width: 350px;
+    height: 450px;
+    margin-right: 0%;
+    margin-left: 70%;
+    margin-top: 30%;
+
+
+}
+
 
 
 .modal{
     position: fixed;
+    display: block;
+    
+    
     top: 1%;
     left: 30%;
-    color: #FFFF;
+    color:black;
     padding: 10px;
-    background: rgba(0,0,0,0.75);
-    opacity: 0;
-    width: 30%;
+    background: #FFFF;
+    visibility: hidden;
+    width: 40%;
+    height: 100%;
+    margin-left: 40%;
 
 }
 .modal:target{
-    opacity: 1;
+   visibility:visible;
     pointer-events: auto;
+    margin-left: 40%;
 }
 .fechar{
     text-decoration: none;
+    border: none;
+    border-radius: 50%;
+    background-color: #FFFF;
+    width: 40px;
+    font-size: 22px;
+    height: 40px;
+    color: #a3a3a3;
+    
 
+
+}
+.formulario{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.formulario,input{
+    width: 70%;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-top: 8%;
+    margin-bottom: 8%;
+    border-color: #cccc;
+    flex-direction: column;
+    color: black;
+}
+
+.formulario,input:hover{
+    border-color: black;
+}
+
+
+.h3{
+    margin-left: 12%;
+    margin-top: 8%;
+    position: relative;
+    display: 1;
+    font-size: 25px;
+}
+.fechar:hover{
+    background-color: #eaeaea;
 
 }
 /* class:
